ingress-aksapp-auto.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-ingress
  namespace: blog
  annotations:
    webapprouting.kubernetes.azure.com/hostname: auto
spec:
  ingressClassName: webapprouting.kubernetes.azure.com

  tls:
  - secretName: aks-auto-tls

  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: blog-frontend
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: blog-api
            port:
              number: 8080
